feat: Improve Lighthouse scores and add FAQ section
This commit addresses several issues identified during a comprehensive review of the application, resulting in significant improvements to Best Practices and Performance scores in Lighthouse.

--- a/index.html
+++ b/index.html
@@ -1200,7 +1200,7 @@
     </div>
     <!-- Video Plegable Widget Jurídico -->
     <div id="video-juridico" style="display:none;position:fixed;top:210px;right:120px;z-index:10011;background:#fffbe9;padding:0.7rem 0.7rem 0.5rem 0.7rem;box-shadow:0 4px 18px rgba(45,80,22,0.13);border-radius:16px;max-width:350px;width:90vw;text-align:center;">
-        <iframe width="100%" height="200" src="https://www.youtube.com/embed/D595_T74eS8" title="Video Ley de Redes Comunitarias de Agua" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border-radius:12px;" loading="lazy"></iframe>
+        <iframe width="100%" height="200" src="https://www.youtube-nocookie.com/embed/D595_T74eS8" title="Video Ley de Redes Comunitarias de Agua" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border-radius:12px;" loading="lazy"></iframe>
     </div>
     <script>
     // Video plegable del widget jurídico
@@ -1254,7 +1254,7 @@
     <section class="fade-in" style="max-width: 700px; margin: 2.5rem auto 0 auto; text-align: center;">
         <h2 style="color: var(--primary); margin-bottom: 1rem; font-size: 2rem;">Conoce DIACUA VIVA en 45 segundos</h2>
         <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 16px; box-shadow: 0 4px 16px rgba(0,0,0,0.12); margin-bottom: 1.5rem;">
-            <iframe src="https://www.youtube.com/embed/b8nsbrPHlrY" title="DIACUA VIVA INTRODUCCION" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; top:0; left:0; width:100%; height:100%; border-radius: 16px;" loading="lazy"></iframe>
+            <iframe src="https://www.youtube-nocookie.com/embed/b8nsbrPHlrY" title="DIACUA VIVA INTRODUCCION" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; top:0; left:0; width:100%; height:100%; border-radius: 16px;" loading="lazy"></iframe>
         </div>
         <a href="https://forms.gle/63a4PoAfJG5AuG5GA" class="cta-btn" style="font-size: 1.15rem; padding: 0.9rem 2.2rem; background: var(--accent); color: white; border-radius: 30px; text-decoration: none; font-weight: 600; box-shadow: 0 2px 8px rgba(0,0,0,0.08); transition: background 0.2s;" target="_blank" rel="noopener noreferrer">Súmate a la comunidad</a>
     </section>
@@ -1309,7 +1309,7 @@
         
         <!-- Video Embed -->
         <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 16px; box-shadow: 0 4px 16px rgba(0,0,0,0.12); width: 100%; max-width: 550px;">
-            <iframe src="https://www.youtube.com/embed/h8z0zi-6wsc" title="Convocatoria Arpas Llaneras" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; top:0; left:0; width:100%; height:100%; border-radius: 16px;" loading="lazy"></iframe>
+            <iframe src="https://www.youtube-nocookie.com/embed/h8z0zi-6wsc" title="Convocatoria Arpas Llaneras" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; top:0; left:0; width:100%; height:100%; border-radius: 16px;" loading="lazy"></iframe>
         </div>
 
         <!-- CTA Button -->
@@ -2189,7 +2189,7 @@
                     <div style="margin: 1.5rem 0; position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 10px;">
                         <iframe 
                             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;" 
-                            src="https://www.youtube.com/embed/NNQCT6A_tFY" 
+                            src="https://www.youtube-nocookie.com/embed/NNQCT6A_tFY" 
                             title="Sembrador de Versos" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
@@ -2205,7 +2205,7 @@
                     <div style="margin: 1.5rem 0; position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 10px;">
                         <iframe 
                             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;" 
-                            src="https://www.youtube.com/embed/oNoIlQ_sFK8" 
+                            src="https://www.youtube-nocookie.com/embed/oNoIlQ_sFK8" 
                             title="La Palabra" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
@@ -2221,7 +2221,7 @@
                     <div style="margin: 1.5rem 0; position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 10px;">
                         <iframe 
                             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;" 
-                            src="https://www.youtube.com/embed/twCDXKnrYYA" 
+                            src="https://www.youtube-nocookie.com/embed/twCDXKnrYYA" 
                             title="Evolución económica de la guitarridad" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
@@ -2237,7 +2237,7 @@
                     <div style="margin: 1.5rem 0; position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 10px;">
                         <iframe 
                             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;" 
-                            src="https://www.youtube.com/embed/vy6e8NIR_nc" 
+                            src="https://www.youtube-nocookie.com/embed/vy6e8NIR_nc" 
                             title="San Martillo Cantillo" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen>
@@ -2636,7 +2636,7 @@
             <a href="https://wa.me/573246611306?text=Hola,%20tengo%20una%20consulta%20general%20sobre%20DIACUA%20VIVA" target="_blank" onclick="handleWhatsAppClick()">💬 Consulta General</a>
         </div>
         <button class="whatsapp-btn" onclick="toggleWhatsApp()" title="Contactar por WhatsApp">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" style="width: 35px; height: 35px;">
+            <img src="whatsapp_logo.svg" alt="WhatsApp" style="width: 35px; height: 35px;">
         </button>
     </div>
 
@@ -2703,7 +2703,7 @@
             var embed = document.getElementById('poem-audio-embed');
             var iframe = document.getElementById('poem-audio-iframe');
             embed.style.display = 'block';
-            iframe.src = 'https://www.youtube.com/embed/ho5y_slp5f0';
+            iframe.src = 'https://www.youtube-nocookie.com/embed/ho5y_slp5f0';
             document.body.style.overflowX = 'auto';
             embed.scrollIntoView({behavior: 'smooth', block: 'center'});
         }
@@ -2726,7 +2726,7 @@
 
             videoBody.innerHTML = `
                 <iframe 
-                    src="https://www.youtube.com/embed/${videoId}?autoplay=1" 
+                    src="https://www.youtube-nocookie.com/embed/${videoId}?autoplay=1" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen
