update formulario investigar y patrocinar

--- a/index.html
+++ b/index.html
@@ -2457,9 +2457,9 @@
             </p>
             
             <div class="cta-buttons">
-                <a href="https://forms.gle/qNGx3jNW1HX8AK8JA" target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">🔬 Quiero Investigar</a>
-                <a href="https://forms.gle/qNGx3jNW1HX8AK8JA" target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">💼 Quiero Patrocinar</a>
-                <a href="https://forms.gle/qNGx3jNW1HX8AK8JA" target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">🙋 Ser Voluntario</a>
+                <a href="https://forms.gle/UUiVEDThLCoXLyiW6" target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">🔬 Quiero Investigar</a>
+                <a href="https://forms.gle/UUiVEDThLCoXLyiW6" target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">💼 Quiero Patrocinar</a>
+                <a href="https://forms.gle/gPYiHCVwXQekBGW16"  target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">🙋 Ser Voluntario</a>
                 <a href="https://forms.gle/qNGx3jNW1HX8AK8JA" target="_blank" rel="noopener noreferrer" class="cta-btn" style="text-decoration: none;">🤝 Colaborar</a>
                 <button onclick="openDonateModal()" class="cta-btn" style="text-decoration: none; background: #e67e22; color: #fff; border: none; cursor: pointer;">💝 Donar</button>
             </div>
@@ -2877,8 +2877,8 @@
                             <li><strong>Plata:</strong> Financiación de herramientas</li>
                             <li><strong>Bronce:</strong> Apoyo logístico</li>
                         </ul>
-                        <button class="cta-btn" style="margin-top: 1rem;" onclick="showContactForm('patrocinador')">Quiero patrocinar</button>
-                        <a href="https://diacua-viva-y2orhdn.gamma.site/" target="_blank" rel="noopener noreferrer" class="cta-btn" style="margin-top: 0.7rem; background: #2d5016; color: #fff; display: inline-block; text-align: center; text-decoration: none; font-size: 1rem; font-weight: 600; border-radius: 30px; padding: 0.7rem 1.7rem;">Conoce nuestro modelo de inversión</a>
+                        <a href="https://forms.gle/gPYiHCVwXQekBGW16" target="_blank" rel="noopener noreferrer" class="cta-btn" style="margin-top: 1rem;">Quiero patrocinar</a>
+                        <a href="https://forms.gle/gPYiHCVwXQekBGW16" target="_blank" rel="noopener noreferrer" class="cta-btn" style="margin-top: 0.7rem; background: #2d5016; color: #fff; display: inline-block; text-align: center; text-decoration: none; font-size: 1rem; font-weight: 600; border-radius: 30px; padding: 0.7rem 1.7rem;">Conoce nuestro modelo de inversión</a>
                     `
                 },
                 'aliado': {
