nuesra esencia y elimina "actua ahora"

--- a/index.html
+++ b/index.html
@@ -1335,11 +1335,10 @@
     <div class="container">
         <!-- Navigation Pills -->
         <div class="nav-pills">
-            <a href="#proyecto" class="nav-pill">El Proyecto</a>
+            <a href="#proyecto" class="nav-pill">¿Qué es DIACUA?</a>
             <a href="#metodologia" class="nav-pill">Metodología</a>
-            <a href="#roles" class="nav-pill">Súmate</a>
+            <a href="#roles" class="nav-pill">Sobre Nosotros</a>
             <a href="#impacto" class="nav-pill">Impacto</a>
-            <a href="#accion" class="nav-pill">Actúa Ahora</a>
             <a href="#noticias-eventos" id="nav-convocatoria" class="nav-pill">Convocatoria</a>
             <a href="https://diacuaviva.blogspot.com/" target="_blank" rel="noopener noreferrer" class="nav-pill">Blog</a>
             <a href="mailto:diacuaviva@gmail.com" class="nav-pill" style="background: var(--accent); color: white;">✉️ Contáctanos</a>
@@ -1366,7 +1365,7 @@
         </div>
 
         <!-- Acordeones de información principal -->
-        <section class="fade-in" style="margin-bottom:2.5rem;">
+        <section id="proyecto" class="fade-in" style="margin-bottom:2.5rem;">
             <div class="accordion" style="max-width: 900px; margin: 0 auto;">
                 <!-- ¿Qué es DIACUA? -->
                 <div class="accordion-item">
@@ -1390,6 +1389,41 @@
                                 <div class="icon">🌍</div>
                                 <h3>Qué Buscamos</h3>
                                 <p>Consolidar la expansión de la <strong>identidad cultural Territorial</strong> a nivel local, regional, nacional e internacional.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Nuestra Esencia Accordion Item -->
+                <div class="accordion-item">
+                    <div class="accordion-header" onclick="toggleAccordion(this)">
+                        <span>Nuestra Esencia</span>
+                        <span class="arrow">▼</span>
+                    </div>
+                    <div class="accordion-content">
+                        <p style="text-align: center; font-size: 1.2rem; font-style: italic; max-width: 700px; margin: 0 auto 2.5rem auto; color: #333;">
+                            "Somos la unión entre el rigor de la geometría y la fluidez del agua."
+                        </p>
+                        <div style="max-width: 800px; margin: 0 auto 2.5rem auto; text-align: center; line-height: 1.8;">
+                            <p>En Diacua Viva somos arquitectos de cultura y tecnología, creando entornos saludables y eficientes. Vemos a cada organización como un organismo vivo que respira, crea y proyecta su identidad territorial al mundo.</p>
+                        </div>
+
+                        <h3 style="text-align: center; color: var(--primary); margin-bottom: 2rem;">Nuestros Pilares</h3>
+                        <div class="cards-grid" style="gap: 1.5rem;">
+                            <div class="card" style="border-top-color: var(--primary);">
+                                <div class="icon">📐</div>
+                                <h4>Estructura y Precisión</h4>
+                                <p>Aplicamos modelos matemáticos y diagnósticos de precisión para identificar puntos de quiebre en la gestión y los flujos de información, asegurando una base sólida y medible.</p>
+                            </div>
+                            <div class="card" style="border-top-color: var(--secondary);">
+                                <div class="icon">🌱</div>
+                                <h4>Vitalidad y Bienestar</h4>
+                                <p>Entendemos que el éxito depende del <i>Conatus</i> (el esfuerzo por perseverar y crecer). Cuidamos la salud del equipo humano para que el motor de la organización nunca se agote.</p>
+                            </div>
+                            <div class="card" style="border-top-color: var(--accent);">
+                                <div class="icon">🌍</div>
+                                <h4>Identidad y Proyección</h4>
+                                <p>Ayudamos a las organizaciones a proyectar su cultura y la paz de su territorio en cada producto. No solo exportamos bienes, proyectamos identidad.</p>
                             </div>
                         </div>
                     </div>
